fix: fix warnings